[metadata]
name = cabinet-calc
version = attr: cabinet_calc.__version__
url = 
author = Harry H. Toigo II
author_email = hhtpub@gmail.com
description = A custom Euro-style cabinet bank configurator.
long_description = An app for quickly and easily calculating one-off, single-
    bank cabinet jobs. Given an inital set of dimensions and parameters, it
    generates a parts list with all materials and dimensions, and can also
    generate a high-quality cutlist in PDF format suitable for printing and
    using on the shop floor. Cabinet Calc has both a GUI interface for ease of
    use, and a command line interface for power users and scripting capability.
license = GPL-3.0-or-later

[flake8]
# __pycache__ and .git are in the default --exclude= list.
extend-exclude = .venv/,docs/,out/
max-line-length = 85
doctests = True

[coverage:run]
branch = True
source =
    # Only measure source inside these directories.
    .
omit =
    # Omit files matching these patterns.
    .venv/*
    util/*

[coverage:html]
directory = coverage_html_report